--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -51,6 +51,12 @@
             </a>
           </li>
           <li>
+            <a [routerLinkActive]="'active'" [routerLink]="'/sales/paiement'" href="javascript:void(0);">
+              <em class="fa fa-product-hunt"> </em>
+              <span>Paiements</span>
+            </a>
+          </li>
+          <li>
             <a [routerLinkActive]="'active'" [routerLink]="'/sales/categorie'" href="javascript:void(0);">
               <em class="fa fa-product-hunt"> </em>
               <span>Catégorie</span>
