--- a/src/app/sales/commande/commande-add/commande-add.component.html
+++ b/src/app/sales/commande/commande-add/commande-add.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="add()" ngForm>
+<form (ngSubmit)="save()" ngForm>
   <mat-card>
     <h1>
       Ajout commande
@@ -40,7 +40,7 @@
                     <div class="col-md-6">
                       <mat-form-field  class="col-lg-12 col-md-12 col-sm-12 col-xs-12" appearance="fill">
                         <mat-label>Date de livraison</mat-label>
-                        <input matInput [matDatepicker]="picker">
+                        <input matInput [matDatepicker]="picker" name="dateLivraison" [(ngModel)]="dateLivraison">
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-datepicker #picker></mat-datepicker>
                       </mat-form-field>
@@ -76,17 +76,17 @@
                     <div class="col-md-5">
                       <mat-form-field class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <mat-label>Prix de vente :</mat-label>
-                        <input [(ngModel)]="prixvente" matInput name="prixvente"/>
+                        <input (blur)="onVerifyPrixVente($event)" [(ngModel)]="prixvente" matInput name="prixvente"/>
                       </mat-form-field>
                     </div>
                     <div class="col-md-2">
-                      <button color="primary" class="btn btn-block" mat-raised-button type="button">
+                      <button [disabled]="!prixVenteInIntervalle" (click)="add()" color="primary" class="btn btn-block" mat-raised-button type="button">
                         Ajouter
                       </button>
                     </div>
                   </div>
 
-                  <div class="form-group row">
+                  <div class="form-group row" *ngIf="lineCommandeList && lineCommandeList.length > 0">
                     <div class="col-md-12">
                       <div class="table-responsive">
                         <mat-card-subtitle>Produits commandés</mat-card-subtitle>
@@ -104,21 +104,7 @@
                           </tr>
                           </thead>
                           <tbody>
-                          <tr>
-                            <td>1</td>
-                            <td>Ordinateur</td>
-                            <td>Hp 15</td>
-                            <td>20</td>
-                            <td>150000</td>
-                            <td>3000000</td>
-                            <td class="text-center">
-                              <button class="btn btn-danger" color="warn"
-                                      mat-mini-fab
-                                      matTooltip="Supprimer" type="button">
-                                <em class="fa fa-trash fa-lg"></em></button>
-                            </td>
-                          </tr>
-                        <!--  <tr
+                          <tr
                             *ngFor="let s of lineCommandeList">
                             <td>{{lineCommandeList.indexOf(s) + 1}}</td>
                             <td>{{s.produit.categorie.libelle}}</td>
@@ -127,12 +113,12 @@
                             <td>{{s.prixVenteUnitaire}}</td>
                             <td>{{s.prixTotal}}</td>
                             <td class="text-center">
-                              <button class="btn btn-danger" color="warn"
+                              <button (click)="deleteRow(s.produit.id)" class="btn btn-danger" color="warn"
                                       mat-mini-fab
                                       matTooltip="Supprimer" type="button">
                                 <em class="fa fa-trash fa-lg"></em></button>
                             </td>
-                          </tr>-->
+                          </tr>
                           </tbody>
                         </table>
                       </div>
